Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-100388

Fix lock ordering with ChangeCollectionsWriterInternal

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-02-17
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The locks are taken basen on an arbitrary ordering which means collections are acquired on a potentially random order.

            Assignee:
            jordi.olivares-provencio@mongodb.com Jordi Olivares Provencio
            Reporter:
            jordi.olivares-provencio@mongodb.com Jordi Olivares Provencio
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: