SERVER-100388 Fix lock ordering in ChangeCollectionsWriterInternal (#31963)

GitOrigin-RevId: 8cf018be48836ec0497bbe1d4b0780d08dea3153